guestbook/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    name: guestbook
    component: frontend
spec:
  selector:
    matchLabels:
      name: guestbook
      component: frontend
  replicas: 3
  template:
    metadata:
      labels:
        name: guestbook
        component: frontend
    spec:   
      containers:
      - name: guestbook
        image: 192.168.121.3/alpha/gb-frontend:latest
        # image: paulczar/gb-frontend:v5
        # image: gcr.io/google-samples/gb-frontend:v4
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 80
