guestbook/frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
spec:
  podSelector:
    matchLabels:
      name: guestbook
      component: frontend
  policyTypes:
  - Ingress
  # - Egress
  ingress:
   - ports:
     - protocol: TCP
       port: 80
  #   - protocol: TCP
  #     port: 443
  # egress:
  # - ports:
  #   - protocol: TCP
  #     port: 27017
