guestbook/mongo-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-network-policy
spec:
  podSelector:
    matchLabels:
      name: mongo
      component: backend
  policyTypes:
  - Ingress
  ingress:
   - ports:
     - protocol: TCP
       port: 27017
